@@ -10,44 +10,44 @@ import com.boardly.data.repository.UserRepository;
 import com.boardly.exception.ResourceNotFoundException;
 import com.boardly.security.model.AppUserDetails;
 import org.springframework.scheduling.annotation.Async;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 public class KanbanBoardService {
 
-    private static final double MIN_POSITION       = 0.125;
-    private static final double COLLISION_THRESHOLD = 0.0001;
-    private static final double REBALANCE_START    = Math.pow(2, 47);
-    private static final double REBALANCE_STEP     = Math.pow(2, 14);
+    private static final double POSITION_GAP = 65536.0;
+    private static final double POSITION_REBALANCE_THRESHOLD = 0.125;
 
     private final KanbanBoardRepository kanbanBoardRepository;
-    private final KanbanCardRepository  kanbanCardRepository;
-    private final KanbanMapper          kanbanMapper;
-    private final UserRepository        userRepository;
-    private final UserMapper            userMapper;
-    private final NotificationService   notificationService;
+    private final KanbanCardRepository kanbanCardRepository;
+    private final KanbanMapper kanbanMapper;
+    private final UserRepository userRepository;
+    private final UserMapper userMapper;
+    private final NotificationService notificationService;
 
     public KanbanBoardService(
             KanbanBoardRepository kanbanBoardRepository,
-            KanbanCardRepository  kanbanCardRepository,
-            KanbanMapper          kanbanMapper,
-            UserRepository        userRepository,
-            UserMapper            userMapper,
-            NotificationService   notificationService) {
+            KanbanCardRepository kanbanCardRepository,
+            KanbanMapper kanbanMapper,
+            UserRepository userRepository,
+            UserMapper userMapper,
+            NotificationService notificationService) {
         this.kanbanBoardRepository = kanbanBoardRepository;
-        this.kanbanCardRepository  = kanbanCardRepository;
-        this.kanbanMapper          = kanbanMapper;
-        this.userRepository        = userRepository;
-        this.userMapper            = userMapper;
-        this.notificationService   = notificationService;
+        this.kanbanCardRepository = kanbanCardRepository;
+        this.kanbanMapper = kanbanMapper;
+        this.userRepository = userRepository;
+        this.userMapper = userMapper;
+        this.notificationService = notificationService;
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
-    // Board
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
+    // Board lifecycle
+    // -------------------------------------------------------------------------
 
     public void createBoard(UUID boardId) {
         KanbanBoard kanbanBoard = new KanbanBoard();
@@ -63,464 +63,479 @@ public class KanbanBoardService {
     }
 
     public KanbanBoardDTO getBoard(UUID boardId) {
-        KanbanBoard kanbanBoard = kanbanBoardRepository.findByBoardId(boardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
+        KanbanBoard kanbanBoard = findBoardOrThrow(boardId);
 
-        KanbanBoardDTO kanbanBoardDTO = kanbanMapper.toDTO(kanbanBoard);
-
-        List<KanbanCardDTO> kanbanCardDTOs = kanbanCardRepository.findAllByBoardId(boardId)
+        List<KanbanCardDTO> allCards = kanbanCardRepository.findAllByBoardId(boardId)
                 .stream()
                 .map(kanbanMapper::toDTO)
                 .toList();
 
-        Map<UUID, List<KanbanCardDTO>> kanbanCardDTOMap = kanbanCardDTOs.stream()
+        Map<UUID, List<KanbanCardDTO>> cardsByList = allCards.stream()
                 .collect(Collectors.groupingBy(KanbanCardDTO::getListId));
 
-        List<KanbanListDTO> kanbanListDTOs = kanbanBoard.getLists().stream()
+        List<KanbanListDTO> lists = kanbanBoard.getLists().stream()
                 .map(list -> {
-                    KanbanListDTO kanbanListDTO = kanbanMapper.toDTO(list);
-                    List<KanbanCardDTO> cards = kanbanCardDTOMap
-                            .getOrDefault(list.getId(), new ArrayList<>());
+                    KanbanListDTO dto = kanbanMapper.toDTO(list);
+                    List<KanbanCardDTO> cards = cardsByList.getOrDefault(list.getId(), new ArrayList<>());
                     cards.sort(Comparator.comparingDouble(KanbanCardDTO::getPosition));
-                    kanbanListDTO.setCards(cards);
-                    return kanbanListDTO;
+                    dto.setCards(cards);
+                    return dto;
                 })
                 .sorted(Comparator.comparingDouble(KanbanListDTO::getPosition))
                 .toList();
 
-        kanbanBoardDTO.setLists(kanbanListDTOs);
-        return kanbanBoardDTO;
+        KanbanBoardDTO boardDTO = kanbanMapper.toDTO(kanbanBoard);
+        boardDTO.setLists(lists);
+        return boardDTO;
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
     // List operations
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
 
     public KanbanListDTO createList(UUID boardId, KanbanListCreationRequestDTO request) {
-        KanbanBoard board = kanbanBoardRepository.findByBoardId(boardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
+        KanbanBoard board = findBoardOrThrow(boardId);
 
-        KanbanList kanbanList = new KanbanList();
-        kanbanList.setId(UUID.randomUUID());
-        kanbanList.setTitle(request.getTitle());
+        KanbanList list = new KanbanList();
+        list.setId(UUID.randomUUID());
+        list.setTitle(request.getTitle());
+        list.setPosition(nextListPosition(board));
 
-        // FIX: resolve position BEFORE adding the new list so it cannot collide
-        // with itself. excludeId=null because the list isn't in the collection yet.
-        double resolvedPosition = resolveListPosition(board.getLists(), request.getPosition(), null);
-        kanbanList.setPosition(resolvedPosition);
+        board.getLists().add(list);
+        kanbanBoardRepository.save(board);
 
-        board.getLists().add(kanbanList);
-        kanbanBoardRepository.save(board); // single save
+        KanbanListDTO dto = kanbanMapper.toDTO(list);
+        dto.setCards(new ArrayList<>());
 
-        KanbanListDTO kanbanListDTO = kanbanMapper.toDTO(kanbanList);
-        kanbanListDTO.setCards(new ArrayList<>());
-        notificationService.sendToTopic("/topic/kanban/" + boardId, kanbanListDTO);
-        return kanbanListDTO;
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.LIST_CREATED, dto));
+        return dto;
     }
 
     public KanbanListDTO updateList(UUID boardId, UUID listId, KanbanListUpdateRequestDTO request) {
-        KanbanBoard board = kanbanBoardRepository.findByBoardId(boardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
-
-        KanbanList list = board.getLists().stream()
-                .filter(l -> l.getId().equals(listId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("List not found"));
-
         if (request.getTitle() == null && request.getPosition() == null) {
             throw new IllegalArgumentException("At least one field (title or position) must be provided");
         }
 
+        KanbanBoard board = findBoardOrThrow(boardId);
+        KanbanList list = findListOrThrow(board, listId);
+
         if (request.getTitle() != null) {
-            String newTitle = request.getTitle().trim();
-            if (newTitle.isEmpty()) throw new IllegalArgumentException("Title cannot be empty");
-            list.setTitle(newTitle);
+            String trimmed = request.getTitle().trim();
+            if (trimmed.isEmpty()) {
+                throw new IllegalArgumentException("Title must not be blank");
+            }
+            list.setTitle(trimmed);
         }
 
         if (request.getPosition() != null) {
-            // FIX: pass listId so the list's current position isn't treated as a
-            // collision against itself. resolveListPosition mutates sibling positions
-            // in-place when rebalancing is needed, so all changes land in one save.
-            double resolvedPosition = resolveListPosition(board.getLists(), request.getPosition(), listId);
-            list.setPosition(resolvedPosition);
+            list.setPosition(resolveListPosition(board, list, request.getPosition()));
         }
 
         kanbanBoardRepository.save(board);
 
         KanbanListDTO dto = kanbanMapper.toDTO(list);
-        notificationService.sendToTopic("/topic/kanban/" + boardId, dto);
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.LIST_UPDATED, dto));
         return dto;
     }
 
-    private double resolveListPosition(List<KanbanList> allLists, double targetPosition, UUID excludeId) {
-        if (targetPosition < 0) {
-            throw new IllegalArgumentException("Position must be >= 0");
-        }
-        if (targetPosition > Long.MAX_VALUE) {
-            throw new IllegalArgumentException("Position must be less than " + Long.MAX_VALUE);
-        }
-
-        List<KanbanList> others = allLists.stream()
-                .filter(l -> excludeId == null || !l.getId().equals(excludeId))
-                .sorted(Comparator.comparingDouble(KanbanList::getPosition))
-                .collect(Collectors.toList());
-
-        boolean collision = others.stream()
-                .anyMatch(l -> Math.abs(l.getPosition() - targetPosition) < COLLISION_THRESHOLD);
-
-        if (!collision && targetPosition >= MIN_POSITION) {
-            return targetPosition;
-        }
-        KanbanList prevNeighbour = null;
-        KanbanList nextNeighbour = null;
-        for (KanbanList l : others) {
-            if (l.getPosition() <= targetPosition) {
-                prevNeighbour = l;
-            } else {
-                nextNeighbour = l;
-                break;
-            }
-        }
-
-        UUID prevId = prevNeighbour != null ? prevNeighbour.getId() : null;
-        UUID nextId = nextNeighbour != null ? nextNeighbour.getId() : null;
-
-        rebalanceListPositions(others);
-
-        double newPrev = prevId == null ? 0.0
-                : others.stream()
-                        .filter(l -> l.getId().equals(prevId))
-                        .mapToDouble(KanbanList::getPosition)
-                        .findFirst().orElse(0.0);
-
-        double newNext = nextId == null ? -1.0
-                : others.stream()
-                        .filter(l -> l.getId().equals(nextId))
-                        .mapToDouble(KanbanList::getPosition)
-                        .findFirst().orElse(-1.0);
-
-        if (nextId == null || newNext < 0) {
-            return (newPrev == 0.0) ? REBALANCE_START : newPrev + REBALANCE_STEP;
-        } else if (prevId == null) {
-            return newNext / 2.0;
-        } else {
-            return (newPrev + newNext) / 2.0;
-        }
-    }
-
-    private void rebalanceListPositions(List<KanbanList> lists) {
-        lists.sort(Comparator.comparingDouble(KanbanList::getPosition));
-        double pos = REBALANCE_START;
-        for (KanbanList l : lists) {
-            l.setPosition(pos);
-            pos += REBALANCE_STEP;
-        }
-    }
-
     public void deleteList(UUID boardId, UUID listId) {
-        KanbanBoard kanbanBoard = kanbanBoardRepository.findByBoardId(boardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
-        boolean removed = kanbanBoard.getLists().removeIf(list -> list.getId().equals(listId));
-        if (!removed) throw new ResourceNotFoundException("List not found");
+        KanbanBoard board = findBoardOrThrow(boardId);
+        boolean removed = board.getLists().removeIf(l -> l.getId() != null && l.getId().equals(listId));
+        if (!removed) {
+            throw new ResourceNotFoundException("List not found");
+        }
         kanbanCardRepository.deleteAllByBoardIdAndListId(boardId, listId);
-        kanbanBoardRepository.save(kanbanBoard);
-        notificationService.sendToTopic("/topic/kanban/" + boardId,
-                Map.of("listId", listId, "deleted", true));
+        kanbanBoardRepository.save(board);
+
+        notificationService.sendBoardEvent(boardId,
+                BoardEvent.of(BoardEvent.Type.LIST_DELETED, Map.of("listId", listId)));
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
     // Card operations
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
 
     public KanbanCardDTO createCard(UUID boardId, KanbanCardCreationRequestDTO request) {
-        KanbanBoard board = kanbanBoardRepository.findByBoardId(boardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
-
+        KanbanBoard board = findBoardOrThrow(boardId);
         UUID listId = request.getListId();
-        board.getLists().stream()
-                .filter(l -> l.getId().equals(listId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("List not found"));
-
-        List<KanbanCard> existingCards = kanbanCardRepository.findAllByBoardIdAndListId(boardId, listId);
-        double resolvedPosition = resolveCardPosition(boardId, existingCards, request.getPosition(), null);
+        findListOrThrow(board, listId); // validate list exists
 
         KanbanCard card = new KanbanCard();
         card.setId(UUID.randomUUID());
         card.setBoardId(boardId);
         card.setListId(listId);
         card.setTitle(request.getTitle());
-        card.setPosition(resolvedPosition);
+        card.setPosition(nextCardPosition(boardId, listId));
+
         kanbanCardRepository.save(card);
 
         KanbanCardDTO dto = kanbanMapper.toDTO(card);
-        notificationService.sendToTopic("/topic/kanban/" + boardId, dto);
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CARD_CREATED, dto));
         return dto;
     }
 
-    public KanbanCardDetailsDTO getCard(UUID boardId, UUID cardId) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
+    public void deleteCard(UUID boardId, UUID cardId) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        kanbanCardRepository.delete(card);
+        notificationService.sendBoardEvent(boardId,
+                BoardEvent.of(BoardEvent.Type.CARD_DELETED, Map.of("cardId", cardId)));
+    }
 
+    public KanbanCardDetailsDTO getCard(UUID boardId, UUID cardId) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
         KanbanCardDetailsDTO dto = kanbanMapper.toDetailsDTO(card);
+
+        // Batch-fetch all comment authors in a single query
+        Set<UUID> authorIds = card.getComments().stream()
+                .map(Comment::getAuthorId)
+                .collect(Collectors.toSet());
+
+        Map<UUID, com.boardly.data.model.sql.authentication.User> usersById =
+                userRepository.findAllById(authorIds).stream()
+                        .collect(Collectors.toMap(
+                                com.boardly.data.model.sql.authentication.User::getId,
+                                Function.identity()));
+
         List<CardCommentDTO> comments = card.getComments().stream()
                 .map(comment -> {
                     CardCommentDTO commentDTO = kanbanMapper.toDTO(comment);
-                    userRepository.findById(comment.getAuthorId())
+                    Optional.ofNullable(usersById.get(comment.getAuthorId()))
                             .ifPresent(user -> commentDTO.setAuthor(userMapper.toDTO(user)));
                     return commentDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
+
         dto.setComments(comments);
         return dto;
     }
 
-    public void updateCard(UUID boardId, UUID cardId, KanbanCardUpdateRequestDTO updateRequest) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
+    public void updateCard(UUID boardId, UUID cardId, KanbanCardUpdateRequestDTO request) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
 
-        if (updateRequest.getTitle()           != null) card.setTitle(updateRequest.getTitle());
-        if (updateRequest.getDescription()     != null) card.setDescription(updateRequest.getDescription());
-        if (updateRequest.getStartDate()       != null) card.setStartDate(updateRequest.getStartDate());
-        if (updateRequest.getDueDate()         != null) card.setDueDate(updateRequest.getDueDate());
-        if (updateRequest.getLabels()          != null) card.setLabels(updateRequest.getLabels());
-        if (updateRequest.getAssignedMembers() != null) card.setAssignedMembers(new HashSet<>(updateRequest.getAssignedMembers()));
+        if (request.getTitle() != null)           card.setTitle(request.getTitle());
+        if (request.getDescription() != null)      card.setDescription(request.getDescription());
+        if (request.getStartDate() != null)        card.setStartDate(request.getStartDate());
+        if (request.getDueDate() != null)          card.setDueDate(request.getDueDate());
+        if (request.getLabels() != null)           card.setLabels(request.getLabels());
+        if (request.getAssignedMembers() != null)  card.setAssignedMembers(new HashSet<>(request.getAssignedMembers()));
 
-        boolean movingToNewList = updateRequest.getListId() != null
-                && !updateRequest.getListId().equals(card.getListId());
-
-        if (movingToNewList) {
-            kanbanBoardRepository.findByBoardId(boardId)
-                    .orElseThrow(() -> new ResourceNotFoundException("Board not found"))
-                    .getLists().stream()
-                    .filter(l -> l.getId().equals(updateRequest.getListId()))
-                    .findFirst()
-                    .orElseThrow(() -> new ResourceNotFoundException("Target list not found"));
-            card.setListId(updateRequest.getListId());
-        }
-
-        if (updateRequest.getPosition() != null) {
-            UUID targetListId = card.getListId(); // already updated above if moving
-
-            List<KanbanCard> targetCards = kanbanCardRepository
-                    .findAllByBoardIdAndListId(boardId, targetListId)
-                    .stream()
-                    .filter(c -> !c.getId().equals(cardId))
-                    .collect(Collectors.toList());
-
-            double resolvedPosition = resolveCardPosition(boardId, targetCards, updateRequest.getPosition(), null);
-            card.setPosition(resolvedPosition);
+        if (request.getPosition() != null || request.getListId() != null) {
+            double targetPosition = request.getPosition() != null ? request.getPosition() : card.getPosition();
+            applyCardMove(boardId, card, targetPosition, request.getListId());
         }
 
         kanbanCardRepository.save(card);
-        notificationService.sendToTopic("/topic/kanban/" + boardId, kanbanMapper.toDTO(card));
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CARD_UPDATED, kanbanMapper.toDTO(card)));
     }
 
-    private double resolveCardPosition(UUID boardId, List<KanbanCard> siblings,
-                                       double targetPosition, UUID excludeId) {
-        if (targetPosition < 0) {
-            throw new IllegalArgumentException("Position must be >= 0");
-        }
-
-        List<KanbanCard> others = siblings.stream()
-                .filter(c -> excludeId == null || !c.getId().equals(excludeId))
-                .sorted(Comparator.comparingDouble(KanbanCard::getPosition))
-                .collect(Collectors.toList());
-
-        boolean collision = others.stream()
-                .anyMatch(c -> Math.abs(c.getPosition() - targetPosition) < COLLISION_THRESHOLD);
-
-        // Happy path.
-        if (!collision && targetPosition >= MIN_POSITION) {
-            return targetPosition;
-        }
-
-        // Identify neighbours before rebalancing.
-        KanbanCard prevNeighbour = null;
-        KanbanCard nextNeighbour = null;
-        for (KanbanCard c : others) {
-            if (c.getPosition() <= targetPosition) {
-                prevNeighbour = c;
-            } else {
-                nextNeighbour = c;
-                break;
-            }
-        }
-
-        UUID prevId = prevNeighbour != null ? prevNeighbour.getId() : null;
-        UUID nextId = nextNeighbour != null ? nextNeighbour.getId() : null;
-
-        rebalanceCardPositions(others);
-        kanbanCardRepository.saveAll(others);
-
-        double newPrev = prevId == null ? 0.0
-                : others.stream()
-                        .filter(c -> c.getId().equals(prevId))
-                        .mapToDouble(KanbanCard::getPosition)
-                        .findFirst().orElse(0.0);
-
-        double newNext = nextId == null ? -1.0
-                : others.stream()
-                        .filter(c -> c.getId().equals(nextId))
-                        .mapToDouble(KanbanCard::getPosition)
-                        .findFirst().orElse(-1.0);
-
-        if (nextId == null || newNext < 0) {
-            return (newPrev == 0.0) ? REBALANCE_START : newPrev + REBALANCE_STEP;
-        } else if (prevId == null) {
-            return newNext / 2.0;
-        } else {
-            return (newPrev + newNext) / 2.0;
-        }
-    }
-
-    private void rebalanceCardPositions(List<KanbanCard> cards) {
-        cards.sort(Comparator.comparingDouble(KanbanCard::getPosition));
-        double pos = REBALANCE_START;
-        for (KanbanCard c : cards) {
-            c.setPosition(pos);
-            pos += REBALANCE_STEP;
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
     // Checklist operations
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
 
-    public ChecklistDTO addChecklist(UUID boardId, UUID cardId, ChecklistDTO checklistDTO) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
+    public ChecklistDTO addChecklist(UUID boardId, UUID cardId, ChecklistDTO request) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+
         Checklist checklist = new Checklist();
         checklist.setId(UUID.randomUUID());
-        checklist.setTitle(checklistDTO.getTitle());
+        checklist.setTitle(request.getTitle());
         checklist.setItems(new ArrayList<>());
         card.getChecklists().add(checklist);
         kanbanCardRepository.save(card);
+
         ChecklistDTO dto = kanbanMapper.toDTO(checklist);
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId, dto);
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CHECKLIST_ADDED, dto));
         return dto;
+    }
+
+    public void updateChecklist(UUID boardId, UUID cardId, UUID checklistId, ChecklistUpdateRequestDTO request) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Checklist checklist = findChecklistOrThrow(card, checklistId);
+
+        if (request.getTitle() != null) {
+            checklist.setTitle(request.getTitle());
+        }
+        kanbanCardRepository.save(card);
+
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CHECKLIST_UPDATED, kanbanMapper.toDTO(checklist)));
     }
 
     public void deleteChecklist(UUID boardId, UUID cardId, UUID checklistId) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        card.getChecklists().removeIf(c -> c.getId().equals(checklistId));
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        boolean removed = card.getChecklists().removeIf(c -> c.getId() != null && c.getId().equals(checklistId));
+        if (!removed) {
+            throw new ResourceNotFoundException("Checklist not found");
+        }
         kanbanCardRepository.save(card);
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId,
-                Map.of("checklistId", checklistId, "deleted", true));
+
+        notificationService.sendBoardEvent(boardId,
+                BoardEvent.of(BoardEvent.Type.CHECKLIST_DELETED, Map.of("checklistId", checklistId)));
     }
 
-    public void updateChecklist(UUID boardId, UUID cardId, UUID checklistId,
-                                ChecklistUpdateRequestDTO updateRequest) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        Checklist checklist = card.getChecklists().stream()
-                .filter(c -> c.getId().equals(checklistId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Checklist not found"));
-        if (updateRequest.getTitle() != null) checklist.setTitle(updateRequest.getTitle());
-        kanbanCardRepository.save(card);
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId,
-                kanbanMapper.toDTO(checklist));
-    }
+    // -------------------------------------------------------------------------
+    // Checklist item operations
+    // -------------------------------------------------------------------------
 
-    public ChecklistItemDTO addChecklistItem(UUID boardId, UUID cardId, UUID checklistId,
-                                             ChecklistItemCreationRequestDTO creationRequest) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        Checklist checklist = card.getChecklists().stream()
-                .filter(c -> c.getId().equals(checklistId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Checklist not found"));
+    public ChecklistItemDTO addChecklistItem(UUID boardId, UUID cardId, UUID checklistId, ChecklistItemCreationRequestDTO request) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Checklist checklist = findChecklistOrThrow(card, checklistId);
+
         ChecklistItem item = new ChecklistItem();
-        item.setText(creationRequest.getText());
+        item.setText(request.getText());
         checklist.getItems().add(item);
         kanbanCardRepository.save(card);
+
         ChecklistItemDTO dto = kanbanMapper.toDTO(item);
-        notificationService.sendToTopic(
-                "/topic/kanban/" + boardId + "/card/" + cardId + "/checklist/" + checklistId, dto);
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CHECKLIST_ITEM_ADDED, dto));
         return dto;
+    }
+
+    public void updateChecklistItem(UUID boardId, UUID cardId, UUID checklistId, UUID itemId, ChecklistItemUpdateRequestDTO request) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Checklist checklist = findChecklistOrThrow(card, checklistId);
+        ChecklistItem item = findChecklistItemOrThrow(checklist, itemId);
+
+        if (request.getText() != null)      item.setText(request.getText());
+        if (request.getCompleted() != null) item.setCompleted(request.getCompleted());
+
+        kanbanCardRepository.save(card);
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.CHECKLIST_ITEM_UPDATED, kanbanMapper.toDTO(item)));
     }
 
     public void deleteChecklistItem(UUID boardId, UUID cardId, UUID checklistId, UUID itemId) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        Checklist checklist = card.getChecklists().stream()
-                .filter(c -> c.getId().equals(checklistId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Checklist not found"));
-        checklist.getItems().removeIf(i -> i.getId().equals(itemId));
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Checklist checklist = findChecklistOrThrow(card, checklistId);
+        boolean removed = checklist.getItems().removeIf(i -> i.getId() != null && i.getId().equals(itemId));
+        if (!removed) {
+            throw new ResourceNotFoundException("Checklist item not found");
+        }
         kanbanCardRepository.save(card);
-        notificationService.sendToTopic(
-                "/topic/kanban/" + boardId + "/card/" + cardId + "/checklist/" + checklistId,
-                Map.of("itemId", itemId, "deleted", true));
+
+        notificationService.sendBoardEvent(boardId,
+                BoardEvent.of(BoardEvent.Type.CHECKLIST_ITEM_DELETED, Map.of("itemId", itemId)));
     }
 
-    public void updateChecklistItem(UUID boardId, UUID cardId, UUID checklistId, UUID itemId,
-                                    ChecklistItemUpdateRequestDTO updateRequest) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        Checklist checklist = card.getChecklists().stream()
-                .filter(c -> c.getId().equals(checklistId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Checklist not found"));
-        ChecklistItem item = checklist.getItems().stream()
-                .filter(i -> i.getId().equals(itemId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Checklist item not found"));
-        if (updateRequest.getText()      != null) item.setText(updateRequest.getText());
-        if (updateRequest.getCompleted() != null) item.setCompleted(updateRequest.getCompleted());
-        kanbanCardRepository.save(card);
-        notificationService.sendToTopic(
-                "/topic/kanban/" + boardId + "/card/" + cardId + "/checklist/" + checklistId,
-                kanbanMapper.toDTO(item));
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
     // Comment operations
-    // ─────────────────────────────────────────────────────────────────────────
+    // -------------------------------------------------------------------------
 
-    public CardCommentDTO addComment(UUID boardId, UUID cardId,
-                                     CommentCreationRequestDTO creationRequest,
-                                     AppUserDetails userDetails) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
+    public CardCommentDTO addComment(UUID boardId, UUID cardId, CommentCreationRequestDTO request, AppUserDetails userDetails) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+
         Comment comment = new Comment();
         comment.setAuthorId(userDetails.getUserId());
-        comment.setContent(creationRequest.getText());
+        comment.setContent(request.getText());
         card.getComments().add(comment);
         kanbanCardRepository.save(card);
+
         CardCommentDTO dto = kanbanMapper.toDTO(comment);
         dto.setAuthor(userMapper.toDTO(userDetails.getUser()));
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId, dto);
+
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.COMMENT_ADDED, dto));
         return dto;
     }
 
-    public void deleteComment(UUID boardId, UUID cardId, UUID commentId) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        card.getComments().removeIf(c -> c.getId().equals(commentId));
-        kanbanCardRepository.save(card);
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId,
-                Map.of("commentId", commentId, "deleted", true));
-    }
+    public void updateComment(UUID boardId, UUID cardId, UUID commentId, CommentUpdateRequestDTO request, UUID requestingUserId) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Comment comment = findCommentOrThrow(card, commentId);
 
-    public void updateComment(UUID boardId, UUID cardId, UUID commentId,
-                              CommentUpdateRequestDTO updateRequest) {
-        KanbanCard card = kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
-                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
-        Comment comment = card.getComments().stream()
-                .filter(c -> c.getId().equals(commentId))
-                .findFirst()
-                .orElseThrow(() -> new ResourceNotFoundException("Comment not found"));
-        if (updateRequest.getText() != null) {
-            comment.setContent(updateRequest.getText());
+        if (!comment.getAuthorId().equals(requestingUserId)) {
+            throw new AccessDeniedException("You can only edit your own comments");
+        }
+
+        if (request.getText() != null) {
+            comment.setContent(request.getText());
             comment.setEdited(true);
         }
         kanbanCardRepository.save(card);
+
         CardCommentDTO dto = kanbanMapper.toDTO(comment);
-        userRepository.findById(comment.getAuthorId())
+        Optional.ofNullable(userRepository.findById(comment.getAuthorId()).orElse(null))
                 .ifPresent(user -> dto.setAuthor(userMapper.toDTO(user)));
-        notificationService.sendToTopic("/topic/kanban/" + boardId + "/card/" + cardId, dto);
+
+        notificationService.sendBoardEvent(boardId, BoardEvent.of(BoardEvent.Type.COMMENT_UPDATED, dto));
+    }
+
+    public void deleteComment(UUID boardId, UUID cardId, UUID commentId, UUID requestingUserId) {
+        KanbanCard card = findCardOrThrow(boardId, cardId);
+        Comment comment = findCommentOrThrow(card, commentId);
+
+        if (!comment.getAuthorId().equals(requestingUserId)) {
+            throw new AccessDeniedException("You can only delete your own comments");
+        }
+
+        card.getComments().removeIf(c -> c.getId() != null && c.getId().equals(commentId));
+        kanbanCardRepository.save(card);
+
+        notificationService.sendBoardEvent(boardId,
+                BoardEvent.of(BoardEvent.Type.COMMENT_DELETED, Map.of("commentId", commentId)));
+    }
+
+    // -------------------------------------------------------------------------
+    // Private helpers — lookup
+    // -------------------------------------------------------------------------
+
+    private KanbanBoard findBoardOrThrow(UUID boardId) {
+        return kanbanBoardRepository.findByBoardId(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException("Board not found"));
+    }
+
+    private KanbanCard findCardOrThrow(UUID boardId, UUID cardId) {
+        return kanbanCardRepository.findByBoardIdAndId(boardId, cardId)
+                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
+    }
+
+    private KanbanList findListOrThrow(KanbanBoard board, UUID listId) {
+        return board.getLists().stream()
+                .filter(l -> l.getId() != null && l.getId().equals(listId))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException("List not found"));
+    }
+
+    private Checklist findChecklistOrThrow(KanbanCard card, UUID checklistId) {
+        return card.getChecklists().stream()
+                .filter(c -> c.getId() != null && c.getId().equals(checklistId))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException("Checklist not found"));
+    }
+
+    private ChecklistItem findChecklistItemOrThrow(Checklist checklist, UUID itemId) {
+        return checklist.getItems().stream()
+                .filter(i -> i.getId() != null && i.getId().equals(itemId))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException("Checklist item not found"));
+    }
+
+    private Comment findCommentOrThrow(KanbanCard card, UUID commentId) {
+        return card.getComments().stream()
+                .filter(c -> c.getId() != null && c.getId().equals(commentId))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException("Comment not found"));
+    }
+
+    // -------------------------------------------------------------------------
+    // Private helpers — position management
+    // -------------------------------------------------------------------------
+
+    private double nextListPosition(KanbanBoard board) {
+        double max = board.getLists().stream()
+                .mapToDouble(KanbanList::getPosition)
+                .max()
+                .orElse(0.0);
+        double next = max + POSITION_GAP;
+        if (next >= Double.MAX_VALUE) {
+            rebalanceListPositions(board.getLists());
+            next = board.getLists().stream()
+                    .mapToDouble(KanbanList::getPosition)
+                    .max()
+                    .orElse(0.0) + POSITION_GAP;
+        }
+        return next;
+    }
+
+    private double nextCardPosition(UUID boardId, UUID listId) {
+        double max = kanbanCardRepository.findAllByBoardIdAndListId(boardId, listId).stream()
+                .mapToDouble(KanbanCard::getPosition)
+                .max()
+                .orElse(0.0);
+        double next = max + POSITION_GAP;
+        if (next >= Double.MAX_VALUE) {
+            rebalanceCardPositions(boardId, listId);
+            next = kanbanCardRepository.findAllByBoardIdAndListId(boardId, listId).stream()
+                    .mapToDouble(KanbanCard::getPosition)
+                    .max()
+                    .orElse(0.0) + POSITION_GAP;
+        }
+        return next;
+    }
+
+    /**
+     * Returns the resolved position for a list move, rebalancing in-memory if needed.
+     * The caller is responsible for saving the board afterwards.
+     */
+    private double resolveListPosition(KanbanBoard board, KanbanList listToMove, double targetPosition) {
+        if (targetPosition < 0) {
+            throw new IllegalArgumentException("Position must be non-negative");
+        }
+
+        listToMove.setPosition(targetPosition);
+
+        boolean needsRebalance = targetPosition >= Double.MAX_VALUE
+                || targetPosition < POSITION_REBALANCE_THRESHOLD
+                || hasListPositionCollision(board.getLists(), targetPosition, listToMove.getId());
+
+        if (needsRebalance) {
+            rebalanceListPositions(board.getLists());
+            return board.getLists().stream()
+                    .filter(l -> l.getId().equals(listToMove.getId()))
+                    .findFirst()
+                    .map(KanbanList::getPosition)
+                    .orElseThrow(() -> new ResourceNotFoundException("List not found after rebalancing"));
+        }
+
+        return targetPosition;
+    }
+
+    /**
+     * Applies a card move (possibly to a different list) and resolves position.
+     * May persist a rebalance; caller must save the card afterwards for non-rebalance field updates.
+     */
+    private void applyCardMove(UUID boardId, KanbanCard card, double targetPosition, UUID targetListId) {
+        if (targetPosition < 0) {
+            throw new IllegalArgumentException("Position must be non-negative");
+        }
+
+        if (targetListId != null) {
+            // Validate the target list exists
+            findListOrThrow(findBoardOrThrow(boardId), targetListId);
+            card.setListId(targetListId);
+        }
+
+        UUID effectiveListId = card.getListId();
+
+        boolean needsRebalance = targetPosition >= Double.MAX_VALUE
+                || targetPosition < POSITION_REBALANCE_THRESHOLD
+                || isCardPositionCollision(boardId, effectiveListId, targetPosition, card.getId());
+
+        if (needsRebalance) {
+            card.setPosition(targetPosition);
+            kanbanCardRepository.save(card);
+            rebalanceCardPositions(boardId, effectiveListId);
+            KanbanCard rebalanced = findCardOrThrow(boardId, card.getId());
+            card.setPosition(rebalanced.getPosition());
+        } else {
+            card.setPosition(targetPosition);
+        }
+    }
+
+    private boolean hasListPositionCollision(List<KanbanList> lists, double target, UUID excludeId) {
+        return lists.stream()
+                .filter(l -> l.getId() != null && !l.getId().equals(excludeId))
+                .anyMatch(l -> Math.abs(l.getPosition() - target) < 0.0001);
+    }
+
+    private boolean isCardPositionCollision(UUID boardId, UUID listId, double target, UUID excludeId) {
+        return kanbanCardRepository.findAllByBoardIdAndListId(boardId, listId).stream()
+                .filter(c -> !c.getId().equals(excludeId))
+                .anyMatch(c -> Math.abs(c.getPosition() - target) < 0.0001);
+    }
+
+    private void rebalanceListPositions(List<KanbanList> lists) {
+        lists.sort(Comparator.comparingDouble(KanbanList::getPosition));
+        double pos = POSITION_GAP;
+        for (KanbanList l : lists) {
+            l.setPosition(pos);
+            pos += POSITION_GAP;
+        }
+    }
+
+    private void rebalanceCardPositions(UUID boardId, UUID listId) {
+        List<KanbanCard> cards = kanbanCardRepository.findAllByBoardIdAndListId(boardId, listId);
+        cards.sort(Comparator.comparingDouble(KanbanCard::getPosition));
+        double pos = POSITION_GAP;
+        for (KanbanCard c : cards) {
+            c.setPosition(pos);
+            pos += POSITION_GAP;
+        }
+        kanbanCardRepository.saveAll(cards);
     }
 }
